# git-auto-sync

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  HomebrewFormula
Formula/: git-auto-sync.rb
pkg/brew/: git-auto-sync.rb
src/: .gitlab-ci.yml  lib.rs  main.rs  repo.rs
